# defiyieldselect

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  TODO.rst  account.py  asset_movement.py  babysteps.py  bowhead-dfo.yaml  contracts_info.py  data.py  deploy.sh  discovery.py  dl_data.sh  dl_results.sh  docker-compose.yml  env.list  forecasting_price.py  main.py  manage.py  model_selection.py  price_forecasting.py  pyproject.toml  query.py  requirements.txt  results_interpretation.py  run-local-docker.sh  run-local-k8s.sh  run-remote-k8s.sh  run.py  run_eval.sh  test_asset_movement.py  test_predict.py  utils.py
approach0/: asset_movement.py  datamanager.py  main.py  predict.py  query.py  test_asset_movement.py
data/: aave_dai.json  compound_dai.json  dydx_eth.json
datacollect/: collect.py  collect_orcadefi.py  collect_yieldfi.py  standardize_data.py
dfo/: collect.py  config.py  db.py  score.py  serve.py
docs/: conf.py  graphs.rst  index.rst
forecast/: config.py  dataloader.py  forecast_value_univariate.py  models.py  run.py
forecasting/: config.py  dataloader.py  datautil.py  forecasters.py  forecasting_price.py  forecasting_valuemultiplier.py  model_selection.py  models.py  results_interpretation.py  so_called_swap_optimization.py  utils.py
go/: aave_api.go  goimport.py  main.go  main.h  main.py
jupyter/: API.ipynb  Untitled.ipynb  about-data.ipynb
modelsearch/: benchmark.py  benchmarkA.py  forecasting_tuning.py  forecasting_value_tuning.py  tuning_data.py
scripts/: deploy.sh  dl_data.sh  dl_results.sh  results_interpretation.py
src/: config.py  dataloader.py  (+9 more)
(+3 files in other folders)
