[tool.poetry]
name = "defiyieldoptimization"
version = "0.1.0"
description = ""
authors = ["Orpheus Lummis <o@orpheuslummis.info>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
# web3 = "^5.13.0"
scikit-learn = "^0.23.2"
peewee = "^3.14.0"
pandas = "^1.1.4"
sktime = "^0.4.3"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
# eth-tester = "^0.5.0-beta.3"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
