[tool.poetry]
name = "defiyieldoptimization"
version = "0.1.0"
description = ""
authors = ["Orpheus Lummis <o@orpheuslummis.info>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
pmdarima = "^1.8.0"
scikit-learn = "^0.23.2"
scikit-posthocs = "^0.6.6"
seaborn = "^0.11.0"
sktime = "^0.4.3"
tsfresh = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
