[tool.poetry]
name = "defiyieldoptimization"
version = "0.1.0"
description = ""
authors = ["Orpheus Lummis <o@orpheuslummis.info>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.25.1"
peewee = "^3.14.0"
python-dateutil = "^2.8.1"
pandas = "^1.2.0"
web3 = "^5.15.0"
scipy = "^1.6.0"
gevent = "^21.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
